--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^2.6.3",
     "date-fns": "^1.29.0",
@@ -17,7 +19,8 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.3",
-    "react-stripe-checkout": "^2.6.3"
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^8.96.0"
   },
   "scripts": {
     "start": "react-scripts start",
