--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
     "aws-amplify": "^3.0.23",
     "aws-amplify-react": "^2.6.3",
-    "date-fns": "^1.29.0",
+    "date-fns": "2.0.0-alpha.25",
+    "dateformat": "^3.0.3",
     "element-react": "^1.4.25",
     "element-theme-default": "^1.4.13",
     "google-maps-react": "^2.0.6",
@@ -17,7 +21,7 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-places-autocomplete": "^7.3.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-stripe-checkout": "^2.6.3",
     "stripe": "^8.96.0"
